--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
         <!-- Simulator Preview with Play Button -->
         <div class="simulator-preview">
-            <img src="https://raw.githubusercontent.com/physicify-simulab/Gaussianbeam/refs/heads/main/Screenshot.png" alt="Screenshot of the Gaussian Beam Simulator">
-            <a href="https://physicify-simulab.github.io/Gaussianbeam/gaussianbeam.html" class="play-link" title="Launch Simulator">
+            <img src="Screenshot.png" alt="Screenshot of the Gaussian Beam Simulator">
+            <a href="gaussianbeam.html" class="play-link" title="Launch Simulator">
                 <div class="play-button">
                     <i class="fas fa-play"></i>
                 </div>
