added copyright logo under title

--- a/gaussianbeam.html
+++ b/gaussianbeam.html
@@ -22,7 +22,15 @@
 
     <!-- Modified H1 -->
     <h1>
-      <span class="h1-title">Gaussian Beam Simulator</span>
+      <!-- Wrapper for title and copyright -->
+      <div class="h1-title-group">
+        <span class="h1-title">Gaussian Beam Simulator</span>
+        <!-- ADDED COPYRIGHT ELEMENT -->
+        <div class="h1-copyright">
+          © 2025 <a href="https://github.com/physicify-simulab" target="_blank" title="Visit Physicify SimuLab on GitHub">Physicify SimuLab</a>
+        </div>
+        <!-- END ADDED COPYRIGHT ELEMENT -->
+      </div>
       <!-- Updated h1-info structure -->
       <div class="h1-info">
         <!-- ADDED ITEM -->
@@ -57,6 +65,7 @@
             <a href="" target="_blank">none</a> -->
           </div>
         </div>
+        <!-- REMOVED COPYRIGHT ITEM FROM HERE -->
       </div>
     </h1>
 
