--- a/gaussianbeam.html
+++ b/gaussianbeam.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Gaussian Beam Simulator</title>
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/homepage/refs/heads/main/favicon.png">
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/physicify-simulab/physicify-simulab.github.io/refs/heads/main/favicon.png">
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 
   <!-- Global Styles -->
   <link rel="stylesheet" href="style.css">
   <!-- Header & Footer Styles -->
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/homepage/header.css">
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/homepage/footer.css">
+  <link rel="stylesheet" href="https://physicify-simulab.github.io/header.css">
+  <link rel="stylesheet" href="https://physicify-simulab.github.io/footer.css">
 
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
@@ -197,8 +197,8 @@
         })
         .catch(error => console.error('Error loading ' + filePath, error));
     }
-    includeHTML('header-placeholder', 'https://physicify-simulab.github.io/homepage/header.html'); // This will now load the simplified header
-    includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/homepage/footer.html');
+    includeHTML('header-placeholder', 'https://physicify-simulab.github.io/header.html'); // This will now load the simplified header
+    includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/footer.html');
   </script>
 </body>
 </html>
