--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="intro_style.css">
 
     <!-- Shared Header & Footer Styles -->
-    <link rel="stylesheet" href="https://physicify-simulab.github.io/header.css">
+    <link rel="stylesheet" href="/header.css">
     <link rel="stylesheet" href="https://physicify-simulab.github.io/footer.css">
 </head>
 <body>
@@ -106,7 +106,7 @@
             })
             .catch(error => console.error('Error loading ' + filePath, error));
         }
-        includeHTML('header-placeholder', 'https://physicify-simulab.github.io/header.html');
+        includeHTML('header-placeholder', '/header.html');
         includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/footer.html');
       </script>
 </body>
