fix headers and footers

--- a/gaussianbeam.html
+++ b/gaussianbeam.html
@@ -10,8 +10,8 @@
   <!-- Global Styles -->
   <link rel="stylesheet" href="style.css">
   <!-- Header & Footer Styles -->
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/header.css">
-  <link rel="stylesheet" href="https://physicify-simulab.github.io/footer.css">
+  <link rel="stylesheet" href="/header.css">
+  <link rel="stylesheet" href="/footer.css">
 
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
@@ -209,8 +209,8 @@
         })
         .catch(error => console.error('Error loading ' + filePath, error));
     }
-    includeHTML('header-placeholder', 'https://physicify-simulab.github.io/header.html'); // This will now load the simplified header
-    includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/footer.html');
+    includeHTML('header-placeholder', '/header.html'); // This will now load the simplified header
+    includeHTML('footer-placeholder', '/footer.html');
   </script>
 </body>
 </html>
