--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Shared Header & Footer Styles -->
     <link rel="stylesheet" href="/header.css">
-    <link rel="stylesheet" href="https://physicify-simulab.github.io/footer.css">
+    <link rel="stylesheet" href="/footer.css">
 </head>
 <body>
 
@@ -107,7 +107,7 @@
             .catch(error => console.error('Error loading ' + filePath, error));
         }
         includeHTML('header-placeholder', '/header.html');
-        includeHTML('footer-placeholder', 'https://physicify-simulab.github.io/footer.html');
+        includeHTML('footer-placeholder', '/footer.html');
       </script>
 </body>
 </html>
